--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-faiss-cpu==1.7.4
-gradio==3.47.1
-langchain==0.0.309
-tensorflow==2.12.1
-tensorflow-hub==0.15.0
-tensorflow-text==2.12.1
-text-generation==0.6.1
+faiss-cpu==1.8.0
+gradio==4.39.0
+langchain-community==0.2.10
+langchain-core==0.2.24
+langchain-openai==0.1.19
+langchain==0.2.11
+tensorflow-hub==0.16.1
+tensorflow-text==2.17.0
+tensorflow==2.17.0
